--- a/app/templates/components/new-instrument.hbs
+++ b/app/templates/components/new-instrument.hbs
@@ -11,6 +11,10 @@
       {{input value=price id="price"}}
     </div>
     <div class="form-group">
+      <label for="description">Description</label>
+      {{input value=description id="description"}}
+    </div>
+    <div class="form-group">
       <label for="condition">Condition</label>
       {{input value=condition id="condition"}}
     </div>
