--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,4 @@
+{{display-cart}}
 <div class="instruments">
   {{#each model as |instrument|}}
   {{instrument-tile instrument=instrument destroyInstrument='destroyInstrument'}}
