--- a/app/templates/components/instrument-tile.hbs
+++ b/app/templates/components/instrument-tile.hbs
@@ -14,9 +14,10 @@
     {{instrument.price}}<br>
     Condition: {{instrument.condition}}<br>
     {{instrument.category}}<br>
-    The elegant tone quality and design of this guitar will bring real satisfaction of ownership to the most critical player. A truly outstanding acoustic/electric, the A-150 Savoy is a pleasure to see and hear, pairing a wonderfully free-playing late-1950s Guild orchestra model with the distinctive addition of an exceptionally voiced DeArmond 1000 floating pickup. The welcome return of a true Guild classic.
+    {{instrument.description}}
   {{/md-card-reveal}}
 
   {{/md-card}}
   <button class="btn" {{action 'delete' instrument}}>Delete</button>
   <button class='btn' {{action 'addToCart' instrument}}>Add to Cart</button>
+  {{update-instrument instrument=instrument update='update'}}
