--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
 {{display-cart}}
 <div class="instruments">
   {{#each model as |instrument|}}
-  {{instrument-tile instrument=instrument destroyInstrument='destroyInstrument'}}
+  {{instrument-tile instrument=instrument destroyInstrument='destroyInstrument' update='update'}}
   {{/each}}
 </div>
 <div class="new-instrument">
