allow feedback to view below instrument-tile

--- a/app/templates/components/display-cart.hbs
+++ b/app/templates/components/display-cart.hbs
@@ -1,4 +1,4 @@
 {{#each shoppingCart.instruments as |instrument|}}
-  {{instrument.name}} -- {{instrument.price}}
+  {{instrument.name}} -- {{instrument.price}}<br>
 {{/each}}
 {{totalPrice}}
