--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
 {{display-cart}}
 <div class="instruments">
-  {{#each model as |instrument|}}
-  {{instrument-tile instrument=instrument destroyInstrument='destroyInstrument' update='update'}}
+  {{#each model.instruments as |instrument|}}
+  {{instrument-tile instrument=instrument destroyInstrument='destroyInstrument' update='update' saveFeedback="saveFeedback"}}
   {{/each}}
 </div>
 <div class="new-instrument">
