--- a/app/templates/components/instrument-tile.hbs
+++ b/app/templates/components/instrument-tile.hbs
@@ -27,5 +27,9 @@
 
   <button class="btn" {{action 'delete' instrument}}>Delete</button>
   <button class='btn' {{action 'addToCart' instrument}}>Add to Cart</button>
-  {{update-instrument instrument=instrument update='update'}}
-  {{new-feedback instrument=instrument saveFeedback="saveFeedback"}}
+  {{#if session.isAuthenticated}}
+    {{update-instrument instrument=instrument update='update'}}
+    {{new-feedback instrument=instrument saveFeedback="saveFeedback"}}
+  {{else}}
+    eh?
+  {{/if}}
