--- a/app/templates/components/instrument-tile.hbs
+++ b/app/templates/components/instrument-tile.hbs
@@ -22,7 +22,9 @@
   {{#each instrument.feedbacks as |feedback|}}
     <li>{{feedback.title}}</li>
     <li>{{feedback.content}}</li>
+  <button class="btn" {{action 'deleteFeedback' feedback}}>delete</button>
   {{/each}}
+
 </ul>
 
   <button class="btn" {{action 'delete' instrument}}>Delete</button>
