--- a/app/templates/sign-in.hbs
+++ b/app/templates/sign-in.hbs
@@ -22,6 +22,6 @@
     class='btn btn-default'
     {{action 'signIn' 'password'}}
   >
-    {{fa-icon 'sign-in'}} Sign In
+    Sign In
   </button>
 {{/if}}
