--- a/app/templates/components/instrument-detail.hbs
+++ b/app/templates/components/instrument-detail.hbs
@@ -1,1 +1,6 @@
-{{yield}}
+
+<button class="btn" {{action 'delete' instrument}}>Delete</button>
+
+<button class='btn' {{action 'addToCart' instrument}}>Add to Cart</button>
+  {{update-instrument instrument=instrument update='update'}}
+  {{new-feedback instrument=instrument saveFeedback="saveFeedback"}}
